--- a/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
@@ -2,7 +2,7 @@
 <div class="sidebar">
     <div class="sidebar-wrapper">
         <div class="logo">
-            <a href="/Home/" class="simple-text">
+            <a href="/Blog/" class="simple-text" target="_blank">
                 <img src="/Content/images/white-logo-sm.png">
             </a>
         </div>
