--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -110,6 +110,9 @@
                     var selectedAuthor = $('#Author').val();
                     $('#ds-author-id').val(selectedAuthor);
                 });
+
+            var authorId = @Model.AuthorId;
+            $('#Author').val(authorId);
         });
     </script>
 }
