--- a/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
@@ -32,9 +32,9 @@
                 </a>
             </li>
             <li id="ds-projects" class="nav-item">
-                <a class="nav-link" href="/Admin/Projects/">
-                    <i class="nc-icon nc-settings-90"></i>
-                    <p>Projects</p>
+                <a class="nav-link" href="/Admin/Tags/">
+                    <i class="nc-icon nc-tag-content"></i>
+                    <p>Tags</p>
                 </a>
             </li>
             <li id="ds-workouts" class="nav-item">
