--- a/Showcase/Views/Shared/_CheckBoxList.cshtml
+++ b/Showcase/Views/Shared/_CheckBoxList.cshtml
@@ -14,7 +14,7 @@
                     <div class="col-2">
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" name="@Model.PropertyName" value="@item.Value" @(item.Selected ? "checked" : "")/>
+                                <input class="form-check-input ds-check-input" type="checkbox" name="@Model.PropertyName" value="@item.Value" @(item.Selected ? "checked" : "")/>
                                 <span class="form-check-sign"></span>
                             </label>
                         </div>
