--- a/Showcase/Content/Site.css
+++ b/Showcase/Content/Site.css
@@ -1,7 +1,6 @@
 ﻿html {
 	font-size: 1rem;
 }
-
 html body {
 	height: 100%;
 	max-height: 100%;
@@ -9,17 +8,90 @@ html body {
 	letter-spacing: 0.01rem;
 	line-height: 1.75em;
 }
-
 body .dropdown-menu {
     font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
     /*font-family: "Exo";*/
 }
-
 html body .profile-page .card-profile .card-profile-stats>div .description {
 	color: #525f7f;
 	opacity: 0.8;
 }
-
+body #ds-comment-box .comment-body p {
+    margin: 15px 0;
+}
+body #ds-comment-box {
+    padding: 60px 0px;
+    background-color: #f5f7f9;
+    margin-top: 40px;
+}
+body #ds-comment-box a {
+    color: #144e6e;
+}
+body #ds-comment-box .comment {
+    box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    color: #767779;
+    background-color: #fff;
+    border-radius: 2px;
+    padding: 20px;
+    margin: 20px 0px;
+    border-color: #d1d9e0;
+    border-width: 1px;
+    border-style: solid;
+    width: 100%;
+    font-family: 'Roboto';
+    font-size: 16px;
+    opacity: 0.9;
+}
+body #ds-comment-box .new-comment {
+    box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    color: #767779;
+    background-color: #fff;
+    border-radius: 2px;
+    padding: 20px;
+    margin: 20px 0px;
+    border-color: #d1d9e0;
+    border-width: 1px;
+    border-style: solid;
+    width: 100%;
+    font-family: 'Roboto';
+    font-size: 16px;
+    opacity: 0.9;
+}
+body .ds-comment-title {
+    line-height: 1.5;
+    font-family: "Merriweather", serif;
+    text-align: Center;
+    font-size: 1.5rem;
+    padding: 40px 0px;
+}
+body #ds-comment-box .avatar {
+    border-radius: 50%;
+}
+body .ds-reply-title, body .must-log-in {
+    margin: 0 0 15px 0;
+    font-family: 'Roboto';
+    font-weight: 400;
+    color: #444;
+    font-size: 16px;
+    text-transform: none;
+    opacity: 0.9;
+}
+html body .reply-title {
+    font-size: 18px;
+    opacity: 0.9;
+}
+body #ds-new-comment-wrap .new-comment {
+    max-width: none;
+}
+body .ds-response-title {
+    font-size: 18px;
+    margin: 0 0 15px 0;
+    font-family: 'Roboto';
+    font-weight: 400;
+    text-align: center;
+    color: #444;
+    text-transform: none;
+}
 body .ds-published-date {
     line-height: 1.5;
     font-family: "Merriweather", serif;
@@ -51,7 +123,9 @@ body .owl-carousel .owl-item img {
 body .ds-post-page .section-profile-cover {
     height: 800px;
 }
-
+body .comment-meta {
+    line-height: 2rem;
+}
 body .ds-background-shade {
     width: 100%;
     height: 580px;
