--- a/Showcase/Views/Blog/Post.cshtml
+++ b/Showcase/Views/Blog/Post.cshtml
@@ -1,4 +1,6 @@
-﻿@model Showcase.Models.Post
+﻿@using System.Activities.Statements
+@using Showcase.Models
+@model Showcase.Models.Post
 
 @{
     Layout = "~/Views/Shared/_PostLayout.cshtml";
@@ -55,4 +57,47 @@
             </div>
         </div>
     </section>
+    <section id="ds-comment-box">
+        <div class="ds-comment-wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2">
+                    </div>
+                    <div class="col-lg-8 col-md-12">
+                        <div class="ds-comment-entry">
+                            <h2 class="ds-subtitle ds-comment-title"><span class="lnr lnr-bubble"></span> Comments</h2>
+                            <p class="ds-response-title">
+                                One response to “@Model.PostName”
+                            </p>
+                            <ol id="ds-comment-list" class="commentlist">
+                                
+                            </ol>
+                                
+                            @if (!User.Identity.IsAuthenticated)
+                            {
+                                <div class="comment-respond">
+                                    <p class="ds-reply-title">Leave a Reply <small><a rel="nofollow" id="cancel-comment-reply-link" href="/web/20180818063619/http://developerstart.com/data-structures-stacks-queues/#respond" style="display:none;">Cancel reply</a></small></p>
+                                    <p class="must-log-in">You must be <a href="https://web.archive.org/web/20180818063619/http://developerstart.com/wp-login.php?redirect_to=http%3A%2F%2Fdeveloperstart.com%2Fdata-structures-stacks-queues%2F">logged in</a> to post a comment.</p>
+                                </div>
+                            }
+                            else
+                            {
+                                Html.RenderAction("_NewComment", "Comment", new { postId = Model.PostId, authorId = Model.AuthorId });
+                            }
+
+                        </div>
+                        <div class="col-lg-2"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
+
+@section Scripts {
+
+    <script type="text/javascript">
+        var createCommentUrl = '@Url.Action("CreateComment", "Comment")';
+        var getCommentsUrl = '@Url.Action("_CommentBox", "Comment", new {postId = Model.PostId})';
+    </script>
+}
