--- a/Showcase/Views/Blog/Post.cshtml
+++ b/Showcase/Views/Blog/Post.cshtml
@@ -69,15 +69,17 @@
                             <p class="ds-response-title">
                                 One response to “@Model.PostName”
                             </p>
-                            <ol id="ds-comment-list" class="commentlist">
-                                
-                            </ol>
+
+                            <div id="ds-comment-list">
+                                @*_CommentBox*@
+                            </div>
                                 
                             @if (!User.Identity.IsAuthenticated)
                             {
                                 <div class="comment-respond">
-                                    <p class="ds-reply-title">Leave a Reply <small><a rel="nofollow" id="cancel-comment-reply-link" href="/web/20180818063619/http://developerstart.com/data-structures-stacks-queues/#respond" style="display:none;">Cancel reply</a></small></p>
-                                    <p class="must-log-in">You must be <a href="https://web.archive.org/web/20180818063619/http://developerstart.com/wp-login.php?redirect_to=http%3A%2F%2Fdeveloperstart.com%2Fdata-structures-stacks-queues%2F">logged in</a> to post a comment.</p>
+                                    <p class="ds-reply-title">Leave a Reply <small><a rel="nofollow" id="cancel-comment-reply-link" href="" style="display:none;">Cancel reply</a></small></p>
+                                    <p class="must-log-in">You must be @Html.ActionLink("logged in", "Login", "Account", null, new { @class = "ds-login-link" })
+                                        to post a comment.</p>
                                 </div>
                             }
                             else
