--- a/Showcase/Views/Shared/_BlogFooter.cshtml
+++ b/Showcase/Views/Shared/_BlogFooter.cshtml
@@ -75,7 +75,7 @@
     </div>
 </footer>
 <!-- End footer Area -->
-
 @Scripts.Render("~/bundles/blogJs")
+@Scripts.Render("~/bundles/jqueryval")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/app")
