--- a/Showcase/Views/Shared/_NewComment.cshtml
+++ b/Showcase/Views/Shared/_NewComment.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Showcase.Models.Comment
 
-@using (Html.BeginForm("_NewComment", "Comment", FormMethod.Post, new { id = "ds-comment-form", @class = "ds-admin-form" }))
+@using (Html.BeginForm("CreateComment", "Comment", FormMethod.Post, new { id = "ds-comment-form", @class = "ds-admin-form" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.PostId)
@@ -11,21 +11,24 @@
 <div id="ds-new-comment-wrap" class="comment">
     <div class="comment-body">
         <div class="comment-author">
-            <img alt="" src="~/Content/images/author.jpg" class="avatar avatar-32 photo" height="32" width="32"> <cite class="fn"><a href="https://web.archive.org/web/20180818063619/http://developerstart.com/" rel="external nofollow" class="url">Nate Johnson</a></cite> <span class="says">says:</span>
+            <img alt="" src="~/Content/images/author.jpg" class="avatar avatar-32 photo" height="32" width="32">
+            <cite class="fn">
+                <a href="" rel="external nofollow" class="url">Nate Johnson</a>
+            </cite>
+            <span class="says">says:</span>
         </div>
 
         <div class="comment-meta">
-            <a href="">
-                @DateTime.Now.ToString()
-            </a>
+            @DateTime.Now.ToString()
         </div>
     </div>
 
     @Html.EditorFor(model => model.CommentContent, new { htmlAttributes = new { @class = "new-comment" } })
     @Html.ValidationMessageFor(model => model.CommentContent, "", new { @class = "text-danger" })
-
-    <button type="button" id="ds-create-comment" value="Create" class="genric-btn primary-border">Submit</button>
     
+    <div class="ds-submit-wrap">
+        <input type="submit" id="ds-create-comment" value="Submit" class="genric-btn primary">
+    </div>
 </div>
 
 }
